# SGL

./: CMakeLists.txt  README.MD  egl.h
doc/: README_zh-CN.MD  README_zh-TW.MD
test/: CMakeLists.txt
test/base/: CMakeLists.txt  init.c  main.c  render.c  winproc.c
